--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -25,6 +25,10 @@
         <source>friend.block_title</source>
         <target>| Mes HappyBizFriends</target>
       </trans-unit>
+      <trans-unit id="solicitation.block_title">
+        <source>solicitation.block_title</source>
+        <target>| Mes nouvelles sollicitations</target>
+      </trans-unit>
       <trans-unit id="home.subtitle">
         <source>home.subtitle</source>
         <target>Prenez plaisir à vous déplacer</target>
@@ -524,6 +528,10 @@
       <trans-unit id="friend.result">
         <source>friend.result</source>
         <target>{count, plural, =0 {aucun résultat} =1 {Mon HappyBizFriend} other {Mes HappyBizFriends (#)}}</target>
+      </trans-unit>
+      <trans-unit id="solicitation.result">
+        <source>solicitation.result</source>
+        <target>{count, plural, =0 {aucun résultat} =1 {Nouvelle sollicitation} other {Nouvelles sollicitations (#)}}</target>
       </trans-unit>
       <trans-unit id="generic.you">
         <source>generic.you</source>
