add feature to show new solicitations

--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -27,7 +27,7 @@
       </trans-unit>
       <trans-unit id="solicitation.block_title">
         <source>solicitation.block_title</source>
-        <target>| Mes nouvelles sollicitations</target>
+        <target>| Nouvelles sollicitations</target>
       </trans-unit>
       <trans-unit id="home.subtitle">
         <source>home.subtitle</source>
