--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -29,6 +29,10 @@
         <source>solicitation.block_title</source>
         <target>| New solicitations</target>
       </trans-unit>
+      <trans-unit id="messaging.block_title">
+        <source>messaging.block_title</source>
+        <target>| Messaging</target>
+      </trans-unit>
       <trans-unit id="home.subtitle">
         <source>home.subtitle</source>
         <target>Make your trip a fun...</target>
