--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -345,6 +345,10 @@
         <source>modal.account.message_delete3</source>
         <target>merci de confirmer la suppression de votre compte.</target>
       </trans-unit>
+      <trans-unit id="modal.title.discussion_delete">
+        <source>modal.title.discussion_delete</source>
+        <target>Suppression de la discussion</target>
+      </trans-unit>
       <trans-unit id="update.avatar.msg.error_1">
         <source>update.avatar.msg.error_1</source>
         <target>Une erreur est survenue lors de la modification de l'image. Merci de réessayer.</target>
