--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -309,6 +309,10 @@
         <source>profile.btn_delete</source>
         <target>Delete my account</target>
       </trans-unit>
+      <trans-unit id="discussion.btn_delete">
+        <source>discussion.btn_delete</source>
+        <target>Delete the discussion</target>
+      </trans-unit>
       <trans-unit id="btn.cancel">
         <source>btn.cancel</source>
         <target>Cancel</target>
@@ -335,19 +339,23 @@
       </trans-unit>
       <trans-unit id="modal.account.message_delete1">
         <source>modal.account.message_delete1</source>
-        <target>Warning,</target>
+        <target>The deletion of your account is final and leads to the irreversible loss of your data.</target>
       </trans-unit>
       <trans-unit id="modal.account.message_delete2">
         <source>modal.account.message_delete2</source>
-        <target>The deletion of your account is final and leads to the irreversible loss of your data.</target>
-      </trans-unit>
-      <trans-unit id="modal.account.message_delete3">
-        <source>modal.account.message_delete3</source>
         <target>Please, confirm the deletion of your account.</target>
       </trans-unit>
       <trans-unit id="modal.title.discussion_delete">
         <source>modal.title.discussion_delete</source>
         <target>Deletion of the discussion</target>
+      </trans-unit>
+      <trans-unit id="modal.discussion.message_delete1">
+        <source>modal.discussion.message_delete1</source>
+        <target>the deletion of the discussion is final.</target>
+      </trans-unit>
+      <trans-unit id="modal.discussion.message_delete2">
+        <source>modal.discussion.message_delete2</source>
+        <target>Please, confirm the deletion of the discussion with</target>
       </trans-unit>
       <trans-unit id="update.avatar.msg.error_1">
         <source>update.avatar.msg.error_2</source>
@@ -564,6 +572,10 @@
       <trans-unit id="generic.cancel">
         <source>generic.cancel</source>
         <target>Cencel</target>
+      </trans-unit>
+      <trans-unit id="generic.warning">
+        <source>generic.warning</source>
+        <target>Warning</target>
       </trans-unit>
        <trans-unit id="generic.accept">
         <source>generic.accept</source>
