--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -33,6 +33,14 @@
         <source>messaging.block_title</source>
         <target>| Messagerie</target>
       </trans-unit>
+      <trans-unit id="messaging.empty_header">
+        <source>messaging.empty_header</source>
+        <target>Messagerie</target>
+      </trans-unit>
+      <trans-unit id="messaging.empty_message">
+        <source>messaging.empty_message</source>
+        <target>Vous n'avez pas de discussions en cours...</target>
+      </trans-unit>
       <trans-unit id="home.subtitle">
         <source>home.subtitle</source>
         <target>Prenez plaisir à vous déplacer</target>
